# CSC8508

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CSC8508.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
AudioEngine/: AudioEngine.cpp  AudioEngine.h  AudioListener.h  AudioObject.cpp  AudioObject.h  AudioSource.h  CMakeLists.txt
CSC8508/: CMakeLists.txt  CSC8508.vcxproj  CSC8508.vcxproj.filters  GameInstantiations.cpp  GameTechRenderer.cpp  GameTechRenderer.h  Main.cpp  NetworkPlayer.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  TutorialGame.cpp  TutorialGame.h  UISystem.cpp  UISystem.h  dungeon.cpp  imgui.ini
CSC8508/Event/: CancellableEvent.h  Event.h  EventManager.h  EventPriority.h
CSC8508/ImGui/: imgui_draw.cpp  imgui_impl_opengl3.cpp
CSC8508/Legacy/: EnemyGameObject.cpp  EnemyGameObject.h  Kitten.cpp  Kitten.h  NavMeshComponent.h  PlayerGameObject.h  StateGameObject.cpp  StateGameObject.h  Swarm.cpp  Swarm.h
CSC8508/Scene/: Scene.h  SceneManager.cpp  SceneManager.h
CSC8508CoreClasses/: BoundsComponent.cpp  BoundsComponent.h  CMakeLists.txt  CSC8508CoreClasses.vcxproj  CSC8508CoreClasses.vcxproj.filters  CollisionDetection.cpp  CollisionDetection.h  ComponentManager.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  IComponent.cpp  IComponent.h  INetworkComponent.cpp  INetworkComponent.h  InputComponent.h  InputNetworkComponent.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PositionConstraint.h  PriorityQueue.h  Transform.h
Event/: CMakeLists.txt  CancellableEvent.h  Event.vcxproj  Event.vcxproj.filters  EventListener.h  EventPriority.h  ignoreMe.cpp
NCLCoreClasses/: Controller.cpp  Controller.h  Keyboard.h  PriorityQueue.h  Vector.h  Win32Window.cpp  Window.cpp  Window.h
OpenGLRendering/: OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters
